# Gaalop

./: .gitignore  .project  .travis.yml  CMakeLists.txt  COMPILE.txt  HowTo-Codegen.docx  NOTICE.md  README.md  README.txt  VERSIONING_SCHEME.txt  algebras.dtd  algebras.xml  appveyor.yml  build.bat  build.sh  buildGaloop.bat  cliffordfunctions.mws  cliffordoptimization - original.mw  cliffordoptimization-no-innerproduct.mw  cliffordoptimization.mw  gaalop.m  gaalopfunctions.m  merge_gaalop.sh  nb-configuration.xml  nbactions.xml  owasp-dependency-check-suppressions.xml  pom.xml  resumeBuildGaalop.bat  testIntrinsics.sh
CVisualizer/: TestGlut.sln
GAPPOpenCL/: pom.xml
additionalJars/: License.txt
algebra/: pom.xml
api/: .project  pom.xml
cli/: .project  pom.xml
clucalc/: .classpath  .project  pom.xml
cmake/: FindGCD.cmake
codegen-compressed/: .project  pom.xml
codegen-cpp/: .project  pom.xml
codegen-csharp/: .project  pom.xml
codegen-dot/: .project  pom.xml
codegen-gaalet/: .project  pom.xml
codegen-ganja/: pom.xml
codegen-gapp/: pom.xml
codegen-gappdot/: pom.xml
codegen-gappopencl/: pom.xml
codegen-java/: pom.xml
codegen-julia/: pom.xml
codegen-latex/: .project  pom.xml
codegen-mathematica/: pom.xml
codegen-matlab/: .project  pom.xml
codegen-python/: pom.xml
codegen-rust/: pom.xml
codegen-verilog/: .project  pom.xml
codegen-vis2d/: pom.xml
codegen-visualizer/: nbactions.xml  pom.xml
codegen-visualizerC/: pom.xml
config/: CMakeLists.txt  cpp_settings.bat  cpp_settings.sh  dialog.cpp  dialog.h  dialog.ui  gaalop_settings.bat  gaalop_settings.sh
cudaProductComputerC/: AlgebraDefinition.h  AlgebraSetting.h  Basetransformation.h  BitReader.h  Blade.h  BladelistCreator.h  CalcThread.h  Grouper.h  PCNeu.cpp  PCNeu.cu  PCNeu.vcxproj  PCNeu.vcxproj.filters  Permutation.cpp  Permutation.h  cudaPart.cu  matrixMul_vs2010.vcxproj  pcCuda.sln
debian/: changelog  control  copyright  rules
distribution/: pom.xml
fastproductComputerC/: AlgebraDefinition.h  BitWriter.h  Blade.cpp  Blade.h  Definitions.h  GAMethods.h  InnerProductComputing.h  OuterGeoProductComputing.h  Outputter.h  PCNeu.cpp  PCNeu.vcxproj  PCNeu.vcxproj.filters  SignedBlade.cpp  SignedBlade.h
gaalet/: .classpath  .project  pom.xml
ganjaVisualCodeInserter/: pom.xml
gapp/: assignments.txt  pom.xml
gappDebugger/: pom.xml
gcd/: pom.xml
gcd-body/: CMakeLists.txt  gcdBody.cpp  gcdBody.h
gcd-config/: CMakeLists.txt  config.pro  dialog.cpp  dialog.h  main.cpp
gealg/: pom.xml
globalSettings/: pom.xml
gpc/: pom.xml
gui/: .project  gaalop.xml  nbactions.xml  pom.xml
include/: BaseVisualizationBackend.h  CMakeLists.txt  GPCUtils.h  MultiVectorEntries.h  OpenGLVisualizationBackend.h  gaalet.h  gcd.h
javaProductComputer/: build.xml
lib/: BaseVisualizationBackend.cpp  CMakeLists.txt  GPCUtils.cpp  OpenGLVisualizationBackend.cpp  gpc.cpp
maple/: .classpath  .project  pom.xml
productComputerC/: Algebra.cpp  Algebra.h  Algebra5d.cpp  Algebra5d.h  Algebra9d.cpp  Algebra9d.h  AlgebraFromFile.cpp  AlgebraFromFile.h  BaseVectors.cpp  BaseVectors.h  Blade.cpp  Blade.h  BladeArray.cpp  BladeArray.h  BladeArrayRoutines.cpp  BladeArrayRoutines.h  BladeRef.cpp  BladeRef.h  BladeStr.cpp  BladeStr.h  BubbleSort.cpp  BubbleSort.h  CMakeLists.txt  CalcThread.cpp  CalcThread.h  CorrectnessTester.cpp  CorrectnessTester.h  DoubledHashMap.h  Functions.cpp  Functions.h  GeoProductCalculator.cpp  GeoProductCalculator.h  InnerProductCalculator.cpp  InnerProductCalculator.h  ListOfBlades.cpp  ListOfBlades.h  Multivector.cpp  Multivector.h  OuterProductCalculator.cpp  OuterProductCalculator.h  (+21 more)
setup/: .project  pom.xml
share/: CMakeLists.txt
share/cmake-2.8/: FindGCD.cmake
share/cmake-2.8/Modules/: CopyFiles.cmake  FindGCD.cmake  FindGPC.cmake  FindMaven.cmake  FindOpenCL.cmake  run_gcd.bat.in  run_gcd.sh.in  run_gpc.bat.in  run_gpc.sh.in
share/doc/: Thumbs.db
share/doc/gpc/: deprecated.html  formula.repository  group__grp__AlgIDs.html  group__grp__AnimVars.html  group__grp__ColVars.html  group__grp__DrawFunc.html  group__grp__ErrPropFunc.html  group__grp__ExecModes.html  group__grp__File.html  group__grp__Functions.html  group__grp__GAFunc.html  group__grp__ImageFunc.html  group__grp__InfoFunc.html  group__grp__InfoVars.html  group__grp__LatexFunc.html  group__grp__LightFunc.html  group__grp__List.html  group__grp__Logic.html  group__grp__MVStyle__Global.html  group__grp__MVStype__E3.html  group__grp__MVStype__N3.html  group__grp__MathConst.html  group__grp__MathFunc.html  group__grp__Matrix.html  group__grp__Misc.html  group__grp__OpIDs.html  group__grp__PreProc.html  group__grp__PresentationFunc.html  group__grp__RanFunc.html  group__grp__Serial.html  group__grp__Tensor.html  group__grp__ToolFunc.html  group__grp__ToolVars.html  group__grp__VarAll.html  group__grp__VarDrawStyle.html  group__grp__VarEnv.html  group__grp__VarMVStyle.html  group__grp__VarMisc.html  index.hhc  index.hhk  (+31 more)
share/gcd/: CMakeLists.txt  cpp_settings.bat  cpp_settings.sh  cuda_settings.bat  cuda_settings.bat.in  cuda_settings.sh  cuda_settings.sh.in  cxx_settings.bat  cxx_settings.bat.in  cxx_settings.sh  cxx_settings.sh.in  gaalop_settings.bat  gaalop_settings.bat.in  gaalop_settings.sh  gaalop_settings.sh.in  java_settings.bat.in  java_settings.sh  java_settings.sh.in  maple_settings  maple_settings.bat  maple_settings.sh  maple_settings.sh.in
starter/: .project  pom.xml
tba/: nbactions.xml  (+1 more)
test/: CMakeLists.txt  Test1_CPP_PointTriangle.gcp  Test1_CXX_PointTriangle.cpg  Test1_CXX_PointTriangle.gcp  Test2_CUDA_PointTriangle.cug  Test2_CXX_Horizon.gcp  Test3_OpenCL_PointTriangle.clg  Test3_OpenCL_PointTriangle.cpp  Test3_OpenCL_PointTriangle.gcl  Test4_Java_PointTriangle.gcj  Test5_CXX_Horizon.cpg  Test5_CXX_Horizon.gcp  Test6_OpenCL_Horizon.clg  Test6_OpenCL_Horizon.cpp  Test6_OpenCL_Horizon.gcl  Test7_CXX_Multiblock.cpg  Test7_CXX_Multiblock.gcp  Test8_OpenCL_Grasping.clg  Test8_OpenCL_Grasping.cpp  Test8_OpenCL_Grasping.gcl  Test9_CXX_ComputeChainLength.cpg  cl.hpp  clDeviceVector.h
(+1469 files in other folders)
