IF(WIN32 AND NOT UNIX)
SET(SETTINGS_MAPLE_BIN_DIR "C:\Program PROGRAMS (x86)\Maple 12\bin.win" CACHE PATH "Maple Binary Dir")
SET(SETTINGS_COMPILER_CXX "mingw32-g++ -x c++ -c" CACHE FILEPATH "CXX compiler command")
SET(SETTINGS_COMPILER_CUDA nvcc CACHE FILEPATH "CUDA compiler command")
SET(SETTINGS_COMPILER_JAVA javac CACHE FILEPATH "Java compiler command")

CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/maple_settings.bat.in" "${CMAKE_CURRENT_BINARY_DIR}/maple_settings.bat")
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/gaalop_settings.bat.in" "${CMAKE_CURRENT_BINARY_DIR}/gaalop_settings.bat")
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/cxx_settings.bat.in" "${CMAKE_CURRENT_BINARY_DIR}/cxx_settings.bat")
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/cuda_settings.bat.in" "${CMAKE_CURRENT_BINARY_DIR}/cuda_settings.bat")
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/java_settings.bat.in" "${CMAKE_CURRENT_BINARY_DIR}/java_settings.bat")

INSTALL(PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/maple_settings.bat" DESTINATION share/gcd)
INSTALL(PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/gaalop_settings.bat" DESTINATION share/gcd)
INSTALL(PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/cxx_settings.bat" DESTINATION share/gcd)
INSTALL(PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/cuda_settings.bat" DESTINATION share/gcd)
INSTALL(PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/java_settings.bat" DESTINATION share/gcd)
ELSE(WIN32 AND NOT UNIX)
SET(SETTINGS_MAPLE_BIN_DIR "/opt/maple13/bin.X86_64_LINUX" CACHE PATH "Maple Binary Dir")
SET(SETTINGS_COMPILER_CXX "g++ -x c++ -c" CACHE FILEPATH "CXX compiler command")
SET(SETTINGS_COMPILER_CUDA nvcc CACHE FILEPATH "CUDA compiler command")
SET(SETTINGS_COMPILER_JAVA javac CACHE FILEPATH "Java compiler command")

CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/maple_settings.sh.in" "${CMAKE_CURRENT_BINARY_DIR}/maple_settings.sh")
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/gaalop_settings.sh.in" "${CMAKE_CURRENT_BINARY_DIR}/gaalop_settings.sh")
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/cxx_settings.sh.in" "${CMAKE_CURRENT_BINARY_DIR}/cxx_settings.sh")
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/cuda_settings.sh.in" "${CMAKE_CURRENT_BINARY_DIR}/cuda_settings.sh")
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/java_settings.sh.in" "${CMAKE_CURRENT_BINARY_DIR}/java_settings.sh")

INSTALL(PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/maple_settings.sh" DESTINATION share/gcd)
INSTALL(PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/gaalop_settings.sh" DESTINATION share/gcd)
INSTALL(PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/cxx_settings.sh" DESTINATION share/gcd)
INSTALL(PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/cuda_settings.sh" DESTINATION share/gcd)
INSTALL(PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/java_settings.sh" DESTINATION share/gcd)
ENDIF(WIN32 AND NOT UNIX)
